# dreamaze

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  run.sh
configs/: hf-job-larger-gpu.json  hf-job-tiny-overfit-gpu.json
docs/adr/: 0001-use-a-custom-conditional-diffusion-solver.md  0002-use-hugging-face-for-compute-and-proof-demo.md
docs/agents/: domain.md
jobs/: dreamaze_hf_job.py
spaces/proof_demo/: Dockerfile  README.md  app.py  requirements.txt
spaces/proof_demo/static/: app.js  index.html  styles.css
src/dreamaze/: __init__.py  dataset.py  dataset_cli.py  evaluation.py  evaluation_cli.py  huggingface_jobs.py  huggingface_jobs_cli.py  proof_demo.py  training.py  training_cli.py  validation.py
tests/: test_conditional_diffusion_evaluation.py  test_conditional_diffusion_overfit_diagnostic.py  test_conditional_diffusion_training.py  test_dataset_artifacts.py  test_dataset_builder_cli.py  test_dataset_splits.py  test_huggingface_jobs.py  test_proof_demo.py  test_solution_validation.py  test_training_examples.py
