[project]
name = "dreamaze"
version = "0.1.0"
description = "Research-first maze solving experiments."
requires-python = ">=3.11"

[project.scripts]
dreamaze-dataset = "dreamaze.dataset_cli:main"
dreamaze-train = "dreamaze.training_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
