[project]
name = "dreamaze"
version = "0.1.0"
description = "Research-first maze solving experiments."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dreamaze-dataset = "dreamaze.dataset_cli:main"
dreamaze-evaluate = "dreamaze.evaluation_cli:main"
dreamaze-hf-job = "dreamaze.huggingface_jobs_cli:main"
dreamaze-train = "dreamaze.training_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
